Update notebook: prioritize query_images, remove merging logic

--- a/train_private_dataset_colab.ipynb
+++ b/train_private_dataset_colab.ipynb
@@ -220,14 +220,43 @@
         "            else:\n",
         "                print(f\"   📁 {folder.name} - Empty or unknown structure\")\n",
         "        \n",
-        "        # Handle multiple dataset folders (e.g., left_rotate and right_rotate)\n",
+        "        # Handle multiple dataset folders - prioritize query_images\n",
         "        if dataset_candidates:\n",
-        "            # Prefer folders with train structure\n",
-        "            train_candidates = [c for c in dataset_candidates if c[1] == \"train\"]\n",
+        "            # PRIORITY: Find query_images first\n",
+        "            query_candidates = [c for c in dataset_candidates if 'query' in c[4].lower()]\n",
         "            \n",
-        "            if train_candidates:\n",
-        "                # If we have multiple train folders (e.g., left_rotate and right_rotate), combine them\n",
-        "                if len(train_candidates) > 1:\n",
+        "            if query_candidates:\n",
+        "                # Prefer query_images with train structure\n",
+        "                query_train = [c for c in query_candidates if c[1] == \"train\"]\n",
+        "                if query_train:\n",
+        "                    ORIGINAL_DATASET = str(query_train[0][0])\n",
+        "                    print(f\"\\n✅ Selected query_images: {ORIGINAL_DATASET} ({query_train[0][3]} images)\")\n",
+        "                else:\n",
+        "                    # Use query folder with most images\n",
+        "                    best_query = max(query_candidates, key=lambda x: x[3])\n",
+        "                    ORIGINAL_DATASET = str(best_query[0])\n",
+        "                    print(f\"\\n✅ Selected query_images: {ORIGINAL_DATASET} ({best_query[3]} images)\")\n",
+        "            else:\n",
+        "                # Fallback: use first dataset with train structure\n",
+        "                train_candidates = [c for c in dataset_candidates if c[1] == \"train\"]\n",
+        "                \n",
+        "                if train_candidates:\n",
+        "                    # If we have multiple train folders, just use the first one (don't merge)\n",
+        "                    ORIGINAL_DATASET = str(train_candidates[0][0])\n",
+        "                    print(f\"\\n⚠️ query_images not found, using first train dataset: {ORIGINAL_DATASET} ({train_candidates[0][3]} images)\")\n",
+        "                else:\n",
+        "                    # Fall back to annotation-based\n",
+        "                    ann_candidates = [c for c in dataset_candidates if c[1] == \"annotations\"]\n",
+        "                    if ann_candidates:\n",
+        "                        best_ann = max(ann_candidates, key=lambda x: x[3])\n",
+        "                        ORIGINAL_DATASET = str(best_ann[0])\n",
+        "                        print(f\"\\n⚠️ Using annotation-based dataset: {ORIGINAL_DATASET} ({best_ann[3]} images)\")\n",
+        "                    else:\n",
+        "                        best_images = max(dataset_candidates, key=lambda x: x[3])\n",
+        "                        ORIGINAL_DATASET = str(best_images[0])\n",
+        "                        print(f\"\\n⚠️ Using dataset with images: {ORIGINAL_DATASET} ({best_images[3]} images)\")\n",
+        "            \n",
+        "            # Note: We're NOT merging left_rotate and right_rotate - using query_images only\n",
         "                    print(f\"\\n📦 Found {len(train_candidates)} dataset folders with train structure:\")\n",
         "                    total_images = sum(c[3] for c in train_candidates)\n",
         "                    for c in train_candidates:\n",
@@ -299,35 +328,19 @@
         "                    with open(merged_ann_file, 'w') as f:\n",
         "                        json.dump(merged_coco, f, indent=2)\n",
         "                    \n",
-        "                    print(f\"   ✅ Merged {len(all_images)} images and {len(all_annotations)} annotations\")\n",
-        "                    print(f\"   ✅ Created merged dataset: {merged_dir}\")\n",
-        "                    \n",
-        "                    ORIGINAL_DATASET = str(merged_dir)\n",
-        "                else:\n",
-        "                    # Single train folder\n",
-        "                    best_train = train_candidates[0]\n",
-        "                    ORIGINAL_DATASET = str(best_train[0])\n",
-        "                    print(f\"\\n✅ Selected dataset: {ORIGINAL_DATASET} (has train folder with {best_train[3]} images)\")\n",
-        "            else:\n",
-        "                # Fall back to annotation-based\n",
-        "                ann_candidates = [c for c in dataset_candidates if c[1] == \"annotations\"]\n",
-        "                if ann_candidates:\n",
-        "                    # Prefer the one with most images\n",
-        "                    best_ann = max(ann_candidates, key=lambda x: x[3])\n",
-        "                    ORIGINAL_DATASET = str(best_ann[0])\n",
-        "                    print(f\"\\n✅ Selected dataset: {ORIGINAL_DATASET} (has annotations, {best_ann[3]} images)\")\n",
-        "                else:\n",
-        "                    # Use folder with most images\n",
-        "                    best_images = max(dataset_candidates, key=lambda x: x[3])\n",
-        "                    ORIGINAL_DATASET = str(best_images[0])\n",
-        "                    print(f\"\\n⚠️ Selected dataset: {ORIGINAL_DATASET} (has {best_images[3]} images, no annotations)\")\n",
-        "                    print(f\"   Note: May need manual verification of structure\")\n",
+        "\n",
         "        else:\n",
         "            ORIGINAL_DATASET = extract_dir\n",
         "            print(f\"\\n⚠️ No valid dataset structure found, using extract directory\")\n",
         "\n",
         "print(f\"\\n{'=' * 60}\")\n",
-        "print(f\"✅ Final dataset path: {ORIGINAL_DATASET}\")\n",
+        "print(f\"📋 Training Strategy:\")\n",
+        "print(f\"   ✅ Using query_images only (no merging)\")\n",
+        "print(f\"   ✅ Will split into train/val/test\")\n",
+        "print(f\"   ✅ Generate progressive occlusion (0%, 25%, 50%, 75%) from test set\")\n",
+        "print(f\"   ✅ Evaluate on occlusion levels\")\n",
+        "print(f\"\\n{'=' * 60}\")\n",
+        "print(f\"✅ Dataset path: {ORIGINAL_DATASET}\")\n",
         "print(f\"   Path exists: {Path(ORIGINAL_DATASET).exists()}\")\n",
         "\n",
         "# Verify the dataset path is accessible and show structure\n",
