Fix __MACOSX detection: add explicit checks to exclude metadata folders

--- a/train_private_dataset_colab.ipynb
+++ b/train_private_dataset_colab.ipynb
@@ -222,11 +222,18 @@
         "        \n",
         "        # Handle multiple dataset folders - merge all for training\n",
         "        if dataset_candidates:\n",
-        "            # Find all datasets with train structure\n",
-        "            train_candidates = [c for c in dataset_candidates if c[1] == \"train\"]\n",
+        "            # Find all datasets with train structure, excluding __MACOSX\n",
+        "            train_candidates = [\n",
+        "                c for c in dataset_candidates \n",
+        "                if c[1] == \"train\" and '__MACOSX' not in c[4] and '.DS_Store' not in c[4]\n",
+        "            ]\n",
         "            \n",
-        "            # Find query_images separately (for evaluation)\n",
-        "            query_candidates = [c for c in dataset_candidates if 'query' in c[4].lower() and c[1] == \"train\"]\n",
+        "            # Find query_images separately (for evaluation), excluding __MACOSX\n",
+        "            query_candidates = [\n",
+        "                c for c in dataset_candidates \n",
+        "                if 'query' in c[4].lower() and c[1] == \"train\" \n",
+        "                and '__MACOSX' not in c[4] and '.DS_Store' not in c[4]\n",
+        "            ]\n",
         "            if query_candidates:\n",
         "                QUERY_DATASET = str(query_candidates[0][0])\n",
         "                print(f\"\\n✅ Found query_images for evaluation: {QUERY_DATASET} ({query_candidates[0][3]} images)\")\n",
