Add final safety check in Cell 8 to prevent __MACOSX from being set

--- a/train_private_dataset_colab.ipynb
+++ b/train_private_dataset_colab.ipynb
@@ -337,6 +337,46 @@
         "            ORIGINAL_DATASET = extract_dir\n",
         "            print(f\"\\n⚠️ No valid dataset structure found, using extract directory\")\n",
         "\n",
+        "# FINAL SAFETY CHECK: Ensure ORIGINAL_DATASET is never __MACOSX\n",
+        "if '__MACOSX' in str(ORIGINAL_DATASET) or Path(ORIGINAL_DATASET).name == '__MACOSX':\n",
+        "    print(f\"\\n❌ CRITICAL ERROR: ORIGINAL_DATASET is set to __MACOSX!\")\n",
+        "    print(f\"   Attempting to fix...\")\n",
+        "    \n",
+        "    # Search for valid datasets\n",
+        "    DATASET_BASE = Path(extract_dir)\n",
+        "    valid_folders = []\n",
+        "    for folder in DATASET_BASE.iterdir():\n",
+        "        if folder.is_dir() and folder.name not in {'__MACOSX', '.DS_Store'}:\n",
+        "            train_check = folder / \"train\" / \"_annotations.coco.json\"\n",
+        "            if train_check.exists():\n",
+        "                valid_folders.append(folder)\n",
+        "    \n",
+        "    if valid_folders:\n",
+        "        # Prefer query_images, then merged_dataset, then any valid\n",
+        "        query_folders = [f for f in valid_folders if 'query' in f.name.lower()]\n",
+        "        merged_folders = [f for f in valid_folders if 'merged' in f.name.lower()]\n",
+        "        \n",
+        "        if merged_folders:\n",
+        "            ORIGINAL_DATASET = str(merged_folders[0])\n",
+        "            print(f\"   ✅ Fixed: Using merged dataset: {ORIGINAL_DATASET}\")\n",
+        "        elif query_folders:\n",
+        "            ORIGINAL_DATASET = str(query_folders[0])\n",
+        "            print(f\"   ✅ Fixed: Using query_images: {ORIGINAL_DATASET}\")\n",
+        "        else:\n",
+        "            ORIGINAL_DATASET = str(valid_folders[0])\n",
+        "            print(f\"   ✅ Fixed: Using first valid dataset: {ORIGINAL_DATASET}\")\n",
+        "    else:\n",
+        "        raise ValueError(\"No valid dataset folders found! Check Cell 8 output.\")\n",
+        "\n",
+        "# Verify annotation file exists\n",
+        "ann_check = Path(ORIGINAL_DATASET) / \"train\" / \"_annotations.coco.json\"\n",
+        "if not ann_check.exists():\n",
+        "    raise FileNotFoundError(\n",
+        "        f\"Annotation file not found: {ann_check}\\n\"\n",
+        "        f\"ORIGINAL_DATASET: {ORIGINAL_DATASET}\\n\"\n",
+        "        f\"Please check Cell 8 output.\"\n",
+        "    )\n",
+        "\n",
         "print(f\"\\n{'=' * 60}\")\n",
         "print(f\"📋 Training Strategy:\")\n",
         "print(f\"   ✅ Training: Merged dataset (query_images + left_rotate + right_rotate)\")\n",
@@ -346,6 +386,7 @@
         "print(f\"✅ Training dataset: {ORIGINAL_DATASET}\")\n",
         "print(f\"✅ Query dataset (for evaluation): {QUERY_DATASET if 'QUERY_DATASET' in locals() else 'Not set'}\")\n",
         "print(f\"   Training dataset exists: {Path(ORIGINAL_DATASET).exists()}\")\n",
+        "print(f\"   Annotation file exists: {ann_check.exists()}\")\n",
         "if 'QUERY_DATASET' in locals() and QUERY_DATASET:\n",
         "    print(f\"   Query dataset exists: {Path(QUERY_DATASET).exists()}\")\n",
         "\n",
