Add option to use existing datasets on Drive without downloading

--- a/train_private_dataset_colab.ipynb
+++ b/train_private_dataset_colab.ipynb
@@ -117,6 +117,128 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "## Step 3: Set Dataset Paths (Skip if datasets already downloaded)\n",
+        "\n",
+        "# If you already have datasets on Drive, set paths here and skip Cell 8\n",
+        "# Otherwise, run Cell 8 to download and merge datasets\n",
+        "\n",
+        "USE_EXISTING_DATASETS = True  # Set to True if datasets are already on Drive\n",
+        "\n",
+        "if USE_EXISTING_DATASETS:\n",
+        "    from pathlib import Path\n",
+        "    \n",
+        "    DATASET_BASE = \"/content/drive/MyDrive/credit_card_yolov12/datasets/private_dataset\"\n",
+        "    \n",
+        "    # Find merged dataset (for training)\n",
+        "    merged_path = Path(DATASET_BASE) / \"merged_dataset\"\n",
+        "    if merged_path.exists() and (merged_path / \"train\" / \"_annotations.coco.json\").exists():\n",
+        "        ORIGINAL_DATASET = str(merged_path)\n",
+        "        print(f\"✅ Found merged dataset: {ORIGINAL_DATASET}\")\n",
+        "    else:\n",
+        "        # Find individual datasets and merge them\n",
+        "        print(\"⚠️ Merged dataset not found. Looking for individual datasets...\")\n",
+        "        \n",
+        "        valid_folders = []\n",
+        "        for folder in Path(DATASET_BASE).iterdir():\n",
+        "            if folder.is_dir() and folder.name not in {'__MACOSX', '.DS_Store'}:\n",
+        "                train_check = folder / \"train\" / \"_annotations.coco.json\"\n",
+        "                if train_check.exists():\n",
+        "                    valid_folders.append(folder)\n",
+        "                    print(f\"   ✅ Found: {folder.name}\")\n",
+        "        \n",
+        "        if len(valid_folders) >= 3:\n",
+        "            # Merge datasets\n",
+        "            print(f\"\\n🔄 Merging {len(valid_folders)} datasets...\")\n",
+        "            import shutil\n",
+        "            import json\n",
+        "            \n",
+        "            merged_dir = Path(DATASET_BASE) / \"merged_dataset\"\n",
+        "            merged_dir.mkdir(exist_ok=True)\n",
+        "            merged_train = merged_dir / \"train\"\n",
+        "            merged_train.mkdir(exist_ok=True)\n",
+        "            \n",
+        "            all_images = []\n",
+        "            all_annotations = []\n",
+        "            image_id_offset = 0\n",
+        "            ann_id_offset = 0\n",
+        "            categories_map = {}\n",
+        "            \n",
+        "            for folder_path in valid_folders:\n",
+        "                train_folder = folder_path / \"train\"\n",
+        "                ann_file = train_folder / \"_annotations.coco.json\"\n",
+        "                \n",
+        "                if ann_file.exists():\n",
+        "                    with open(ann_file, 'r') as f:\n",
+        "                        coco_data = json.load(f)\n",
+        "                    \n",
+        "                    if not categories_map:\n",
+        "                        categories_map = {cat['id']: cat for cat in coco_data.get('categories', [])}\n",
+        "                    \n",
+        "                    for img in coco_data.get('images', []):\n",
+        "                        img['id'] = image_id_offset + img['id']\n",
+        "                        src_img = train_folder / img['file_name']\n",
+        "                        if src_img.exists():\n",
+        "                            dst_img = merged_train / img['file_name']\n",
+        "                            if dst_img.exists():\n",
+        "                                stem = Path(img['file_name']).stem\n",
+        "                                ext = Path(img['file_name']).suffix\n",
+        "                                img['file_name'] = f\"{folder_path.name}_{stem}{ext}\"\n",
+        "                                dst_img = merged_train / img['file_name']\n",
+        "                            shutil.copy2(src_img, dst_img)\n",
+        "                            all_images.append(img)\n",
+        "                    \n",
+        "                    for ann in coco_data.get('annotations', []):\n",
+        "                        ann['id'] = ann_id_offset + ann['id']\n",
+        "                        ann['image_id'] = image_id_offset + ann['image_id']\n",
+        "                        all_annotations.append(ann)\n",
+        "                    \n",
+        "                    image_id_offset = max(img['id'] for img in all_images) + 1\n",
+        "                    ann_id_offset = max(ann['id'] for ann in all_annotations) + 1\n",
+        "            \n",
+        "            merged_coco = {\n",
+        "                'images': all_images,\n",
+        "                'annotations': all_annotations,\n",
+        "                'categories': list(categories_map.values())\n",
+        "            }\n",
+        "            \n",
+        "            merged_ann_file = merged_train / \"_annotations.coco.json\"\n",
+        "            with open(merged_ann_file, 'w') as f:\n",
+        "                json.dump(merged_coco, f, indent=2)\n",
+        "            \n",
+        "            ORIGINAL_DATASET = str(merged_dir)\n",
+        "            print(f\"   ✅ Merged {len(all_images)} images\")\n",
+        "        elif len(valid_folders) == 1:\n",
+        "            ORIGINAL_DATASET = str(valid_folders[0])\n",
+        "            print(f\"✅ Using single dataset: {ORIGINAL_DATASET}\")\n",
+        "        else:\n",
+        "            raise ValueError(f\"Expected 3+ datasets or 1 merged dataset. Found {len(valid_folders)} folders.\")\n",
+        "    \n",
+        "    # Find query_images (for evaluation)\n",
+        "    query_folders = [f for f in Path(DATASET_BASE).iterdir() \n",
+        "                     if f.is_dir() and 'query' in f.name.lower() \n",
+        "                     and f.name not in {'__MACOSX', '.DS_Store'}]\n",
+        "    \n",
+        "    if query_folders and (query_folders[0] / \"train\" / \"_annotations.coco.json\").exists():\n",
+        "        QUERY_DATASET = str(query_folders[0])\n",
+        "        print(f\"✅ Found query_images: {QUERY_DATASET}\")\n",
+        "    else:\n",
+        "        QUERY_DATASET = ORIGINAL_DATASET\n",
+        "        print(f\"⚠️ query_images not found, using training dataset for evaluation\")\n",
+        "    \n",
+        "    print(f\"\\n{'='*60}\")\n",
+        "    print(f\"✅ Training dataset: {ORIGINAL_DATASET}\")\n",
+        "    print(f\"✅ Query dataset: {QUERY_DATASET}\")\n",
+        "    print(f\"{'='*60}\")\n",
+        "else:\n",
+        "    print(\"⚠️ USE_EXISTING_DATASETS is False. Run Cell 8 to download datasets.\")\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
