Fix dataset search: check parent directory and base path for datasets

--- a/train_private_dataset_colab.ipynb
+++ b/train_private_dataset_colab.ipynb
@@ -607,12 +607,30 @@
         "    print(f\"\\n❌ ERROR: ORIGINAL_DATASET contains __MACOSX!\")\n",
         "    print(f\"   Searching for valid dataset...\")\n",
         "    \n",
-        "    # Find valid dataset\n",
-        "    DATASET_BASE = \"/content/drive/MyDrive/credit_card_yolov12/datasets/private_dataset\"\n",
+        "    # Find valid dataset - check multiple locations\n",
+        "    search_paths = [\n",
+        "        \"/content/drive/MyDrive/credit_card_yolov12/datasets/private_dataset\",\n",
+        "        Path(ORIGINAL_DATASET).parent,  # Parent of __MACOSX\n",
+        "        \"/content/drive/MyDrive/credit_card_yolov12/datasets\",\n",
+        "    ]\n",
+        "    \n",
         "    valid_folders = []\n",
         "    \n",
-        "    if Path(DATASET_BASE).exists():\n",
-        "        for folder in Path(DATASET_BASE).iterdir():\n",
+        "    for DATASET_BASE in search_paths:\n",
+        "        base_path = Path(DATASET_BASE)\n",
+        "        if not base_path.exists():\n",
+        "            continue\n",
+        "            \n",
+        "        print(f\"   Checking: {base_path}\")\n",
+        "        \n",
+        "        # Check if base_path itself is a dataset (has train/_annotations.coco.json)\n",
+        "        base_train = base_path / \"train\" / \"_annotations.coco.json\"\n",
+        "        if base_train.exists():\n",
+        "            valid_folders.append(base_path)\n",
+        "            print(f\"   ✅ Found dataset at base: {base_path.name}\")\n",
+        "        \n",
+        "        # Check subfolders\n",
+        "        for folder in base_path.iterdir():\n",
         "            if folder.is_dir() and folder.name not in {'__MACOSX', '.DS_Store'}:\n",
         "                train_check = folder / \"train\" / \"_annotations.coco.json\"\n",
         "                if train_check.exists():\n",
@@ -634,6 +652,10 @@
         "            ORIGINAL_DATASET = str(valid_folders[0])\n",
         "            print(f\"   ✅ Fixed: Using first valid dataset: {ORIGINAL_DATASET}\")\n",
         "    else:\n",
+        "        print(f\"\\n❌ No valid dataset folders found!\")\n",
+        "        print(f\"   Searched in:\")\n",
+        "        for sp in search_paths:\n",
+        "            print(f\"      - {sp} (exists: {Path(sp).exists()})\")\n",
         "        raise ValueError(\"No valid dataset folders found! Please check your Drive folder.\")\n",
         "\n",
         "# Verify annotation file exists\n",
