Fix split cell: search for annotations recursively and merge datasets properly

--- a/train_private_dataset_colab.ipynb
+++ b/train_private_dataset_colab.ipynb
@@ -619,9 +619,17 @@
         "    for DATASET_BASE in search_paths:\n",
         "        base_path = Path(DATASET_BASE)\n",
         "        if not base_path.exists():\n",
+        "            print(f\"   ⚠️ Path doesn't exist: {base_path}\")\n",
         "            continue\n",
         "            \n",
-        "        print(f\"   Checking: {base_path}\")\n",
+        "        print(f\"\\n   Checking: {base_path}\")\n",
+        "        \n",
+        "        # List all items first\n",
+        "        all_items = list(base_path.iterdir())\n",
+        "        print(f\"      Found {len(all_items)} items:\")\n",
+        "        for item in sorted(all_items)[:20]:  # Show first 20\n",
+        "            item_type = \"📁\" if item.is_dir() else \"📄\"\n",
+        "            print(f\"         {item_type} {item.name}\")\n",
         "        \n",
         "        # Check if base_path itself is a dataset (has train/_annotations.coco.json)\n",
         "        base_train = base_path / \"train\" / \"_annotations.coco.json\"\n",
@@ -629,13 +637,33 @@
         "            valid_folders.append(base_path)\n",
         "            print(f\"   ✅ Found dataset at base: {base_path.name}\")\n",
         "        \n",
+        "        # Also check if base_path has annotation directly\n",
+        "        base_ann = base_path / \"_annotations.coco.json\"\n",
+        "        if base_ann.exists() and base_path not in valid_folders:\n",
+        "            valid_folders.append(base_path)\n",
+        "            print(f\"   ✅ Found dataset at base (annotation in root): {base_path.name}\")\n",
+        "        \n",
         "        # Check subfolders\n",
         "        for folder in base_path.iterdir():\n",
-        "            if folder.is_dir() and folder.name not in {'__MACOSX', '.DS_Store'}:\n",
-        "                train_check = folder / \"train\" / \"_annotations.coco.json\"\n",
-        "                if train_check.exists():\n",
+        "            if not folder.is_dir() or folder.name in {'__MACOSX', '.DS_Store'}:\n",
+        "                continue\n",
+        "                \n",
+        "            # Check standard structure: folder/train/_annotations.coco.json\n",
+        "            train_check = folder / \"train\" / \"_annotations.coco.json\"\n",
+        "            if train_check.exists():\n",
+        "                valid_folders.append(folder)\n",
+        "                print(f\"   ✅ Found valid dataset: {folder.name} (has train/_annotations.coco.json)\")\n",
+        "            else:\n",
+        "                # Check alternative: folder/_annotations.coco.json\n",
+        "                alt_check = folder / \"_annotations.coco.json\"\n",
+        "                if alt_check.exists():\n",
         "                    valid_folders.append(folder)\n",
-        "                    print(f\"   ✅ Found valid dataset: {folder.name}\")\n",
+        "                    print(f\"   ✅ Found valid dataset: {folder.name} (has _annotations.coco.json)\")\n",
+        "                else:\n",
+        "                    # Check if folder has images (might need to check structure)\n",
+        "                    has_images = len(list(folder.glob(\"**/*.jpg\"))) + len(list(folder.glob(\"**/*.png\"))) > 0\n",
+        "                    if has_images:\n",
+        "                        print(f\"   ⚠️ {folder.name} has images but no annotations found\")\n",
         "    \n",
         "    if valid_folders:\n",
         "        # Prefer merged_dataset, then query_images, then any valid\n",
