Fix progressive occlusion: use query_images test set instead of credit-cards

--- a/train_private_dataset_colab.ipynb
+++ b/train_private_dataset_colab.ipynb
@@ -767,35 +767,54 @@
         "\n",
         "# Find query_images split directory (for evaluation)\n",
         "DATASET_BASE = \"/content/drive/MyDrive/credit_card_yolov12/datasets\"\n",
-        "if 'QUERY_DATASET' in locals() and QUERY_DATASET:\n",
-        "    # Find the split directory for query_images\n",
-        "    query_name = Path(QUERY_DATASET).name\n",
-        "    query_split_dirs = list(Path(DATASET_BASE).glob(f\"{query_name}_split\"))\n",
-        "    if query_split_dirs:\n",
-        "        TEST_DATASET = str(query_split_dirs[0] / \"test\")\n",
-        "        print(f\"✅ Found query_images test dataset: {TEST_DATASET}\")\n",
-        "    else:\n",
-        "        # Fallback: use first split directory\n",
-        "        split_dirs = list(Path(DATASET_BASE).glob(\"*_split\"))\n",
-        "        if split_dirs:\n",
-        "            TEST_DATASET = str(split_dirs[0] / \"test\")\n",
-        "            print(f\"⚠️ Using first split test dataset: {TEST_DATASET}\")\n",
-        "        else:\n",
-        "            raise FileNotFoundError(\"Split dataset not found. Run split_dataset.py first.\")\n",
+        "\n",
+        "# Look specifically for query_images_split\n",
+        "query_split_dirs = list(Path(DATASET_BASE).glob(\"*query_images*_split\"))\n",
+        "if not query_split_dirs:\n",
+        "    # Try alternative naming\n",
+        "    query_split_dirs = list(Path(DATASET_BASE).glob(\"query_images_split\"))\n",
+        "\n",
+        "if query_split_dirs:\n",
+        "    TEST_DATASET = str(query_split_dirs[0] / \"test\")\n",
+        "    print(f\"✅ Found query_images test dataset: {TEST_DATASET}\")\n",
+        "    print(f\"   Path exists: {Path(TEST_DATASET).exists()}\")\n",
         "else:\n",
-        "    # Fallback: use first split directory\n",
-        "    split_dirs = list(Path(DATASET_BASE).glob(\"*_split\"))\n",
-        "    if split_dirs:\n",
-        "        TEST_DATASET = str(split_dirs[0] / \"test\")\n",
-        "        print(f\"⚠️ QUERY_DATASET not set, using first split: {TEST_DATASET}\")\n",
-        "    else:\n",
-        "        raise FileNotFoundError(\"Split dataset not found. Run split_dataset.py first.\")\n",
+        "    # List all split directories to help debug\n",
+        "    all_splits = list(Path(DATASET_BASE).glob(\"*_split\"))\n",
+        "    print(f\"⚠️ query_images_split not found. Available splits:\")\n",
+        "    for split_dir in all_splits:\n",
+        "        print(f\"   - {split_dir.name}\")\n",
+        "        test_dir = split_dir / \"test\"\n",
+        "        if test_dir.exists():\n",
+        "            print(f\"     → Has test folder\")\n",
+        "    \n",
+        "    # Use query_images_split if it exists, otherwise error\n",
+        "    raise FileNotFoundError(\n",
+        "        f\"query_images_split not found!\\n\"\n",
+        "        f\"Available splits: {[s.name for s in all_splits]}\\n\"\n",
+        "        f\"Please ensure query_images was split in Cell 12.\"\n",
+        "    )\n",
+        "\n",
+        "# Verify test dataset exists and has annotations\n",
+        "if not Path(TEST_DATASET).exists():\n",
+        "    raise FileNotFoundError(f\"Test dataset path doesn't exist: {TEST_DATASET}\")\n",
+        "\n",
+        "ann_file = Path(TEST_DATASET) / \"_annotations.coco.json\"\n",
+        "if not ann_file.exists():\n",
+        "    # Check alternative location\n",
+        "    ann_file = Path(TEST_DATASET) / \"train\" / \"_annotations.coco.json\"\n",
+        "\n",
+        "if not ann_file.exists():\n",
+        "    raise FileNotFoundError(f\"Annotation file not found in {TEST_DATASET}\")\n",
+        "\n",
+        "print(f\"✅ Annotation file: {ann_file}\")\n",
         "\n",
         "# Verify script exists\n",
         "script_path = Path(REPO_DIR) / \"src\" / \"prepare_progressive_tests.py\"\n",
         "if script_path.exists():\n",
         "    print(f\"✅ Found script: {script_path}\")\n",
         "    print(f\"📋 Generating occlusion levels: 0%, 25%, 75%, 100%\")\n",
+        "    print(f\"📋 From query_images test set: {TEST_DATASET}\")\n",
         "    !python src/prepare_progressive_tests.py --test-dataset {TEST_DATASET} --type crop --seed 42 --levels 25 75 100\n",
         "else:\n",
         "    print(f\"❌ Script not found at: {script_path}\")\n"
